k8s/mediaserver/calibreweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibreweb
  namespace: mediaserver
  labels:
    app: calibreweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibreweb
  template:
    metadata:
      labels:
        app: calibreweb
    spec:
      containers:
        - name: calibreweb
          image: lscr.io/linuxserver/calibre-web:0.6.25
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/books
              name: books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web-pvc-pve
        - name: books
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/library/books
