k8s/mediaserver/calibreweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibreweb-service
  namespace: mediaserver
spec:
  type: LoadBalancer
  selector:
    app: calibreweb
  ports:
    - port: 8083
