k8s/mediaserver/calibreweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibreweb
  namespace: mediaserver
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: "calibreweb.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: calibreweb-service
                port:
                  number: 8083
  tls:
  - hosts:
    - calibreweb.enricoruggieri.com
    secretName: calibreweb-cert-tls
